--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="hello">Hello World, Gps_testingActivity!</string>
     <string name="app_name">Gps_testing</string>
     <string name="Quit">Quit</string>
+    <string name="Next">Next</string>
+    <string name="Return">return</string>
 </resources>
